--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
-Django>=4.2,<6.0
-Pillow>=10.0.0
-reportlab>=4.0.0
-vobject>=0.9.6.1
-
+asgiref==3.11.0
+charset-normalizer==3.4.4
+Django==5.2.9
+gunicorn==23.0.0
+packaging==25.0
+pillow==12.0.0
+python-dateutil==2.9.0.post0
+pytz==2025.2
+reportlab==4.4.7
+six==1.17.0
+sqlparse==0.5.5
+vobject==0.9.9
+whitenoise==6.11.0
