--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 asgiref==3.11.0
 charset-normalizer==3.4.4
 Django==5.2.9
+dj-database-url==2.1.0
 gunicorn==23.0.0
 packaging==25.0
 pillow==12.0.0
+psycopg2-binary==2.9.9
 python-dateutil==2.9.0.post0
 pytz==2025.2
 reportlab==4.4.7
